# elastic-bilara

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  add_indexes.sql  apply_db_optimization.sh  bilara_server_block.conf  clone_bilara_data.sh  docker-compose.yml  install_docker.sh  jest.setup.js  package.json  test_language_integration.py  test_remark.py
backend/: .gitignore  backend.dockerfile  pyproject.toml  test_check_noti.py  test_db.py  test_find_root.py  test_noti_flow.py  test_query.py  test_remark.py  tests_prefix.py
backend/app/: celery.py  main.py  pyproject.toml  tasks.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  dictionary.py  directories.py  git_ops.py  languages.py  notifications.py  projects.py  publications.py  pull_request.py  remarks.py  search.py  settings.py  tags.py  tasks.py  users.py
backend/app/app/: main.py
backend/app/app/core/: config.py
backend/app/core/: config.py  text_types.py
backend/app/db/: database.py
backend/app/db/models/: __init__.py  dictionary_cache.py  dictionary_hidden_word.py  dictionary_note.py  notification.py  path.py  remark.py  segment_uid.py  translation_progress.py  user.py  user_preference.py
backend/app/db/schemas/: dictionary_note.py  path.py  remark.py  segment_uid.py  user.py  user_preference.py
backend/app/services/auth/: models.py  schema.py  utils.py
backend/app/services/dictionary_hidden_words/: utils.py
backend/app/services/dictionary_notes/: __init__.py  utils.py
backend/app/services/directories/: finder.py  models.py  remover.py  utils.py
backend/app/services/git/: filesystem.py  manager.py  schema.py  utils.py
backend/app/services/notifications/: models.py  remark_notifications.py
backend/app/services/projects/: models.py  uid_expander.py  uid_reducer.py  utils.py
backend/app/services/remarks/: utils.py
backend/app/services/search/: models.py
backend/app/services/users/: permissions.py  populate_data.py  roles.py  schema.py  utils.py
backend/app/tests/: conftest.py
backend/app/tests/api/api_v1/: test_auth.py  test_directories.py  test_gitops.py  test_notifications.py  test_projects.py  test_pull_request.py  test_search.py  test_settings.py  test_tags.py  test_tasks.py  test_users.py
backend/app/tests/services/auth/: test_utils.py
backend/app/tests/services/directories/: test_finder.py  test_remover.py  test_utils.py
backend/app/tests/services/git/: test_manager.py  test_utils.py
backend/app/tests/utils/: factories.py  git.py
backend/scripts/: entrypoint.sh
backend/search/: search.py  utils.py
(+115 files in other folders)
