[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "3.11.3"
uvicorn = "^0.22.0"
fastapi = "^0.98.0"
httpx = "^0.24.1"
pydantic = "^1.10.9"
gunicorn = "^20.1.0"
pytest = "^7.4.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"
flake8 = "^6.0.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
