[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "3.11.3"
uvicorn = "^0.22.0"
fastapi = "^0.98.0"
httpx = "^0.24.1"
pydantic = {version="^1.10.9", extras=["email"]}
gunicorn = "^20.1.0"
pytest = "^7.4.0"
elasticsearch = "8.8.0"
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytest-asyncio = "^0.21.0"
freezegun = "^1.2.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"
flake8 = "^6.0.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "users_file: provide users data to the users_file fixture"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
